# verifiers-ts

./: .gitignore  AGENTS.md  README.md
verifiers-ts/: .eslintrc.json  IMPLEMENTATION_STATUS.md  README.md  package.json  (+4 more)
verifiers-ts/environments/example-generate-text-agent/: README.md  example_generate_text_agent.py  package.json  pyproject.toml  tsconfig.json
verifiers-ts/environments/example-generate-text-agent/outputs/evals/example-generate-text-agent--gpt-4o-mini/0eeee914/: results.jsonl
verifiers-ts/environments/example-generate-text-agent/outputs/evals/example-generate-text-agent--gpt-4o-mini/1140a054/: results.jsonl
verifiers-ts/environments/example-generate-text-agent/outputs/evals/example-generate-text-agent--gpt-4o-mini/19639cb9/: results.jsonl
verifiers-ts/environments/example-generate-text-agent/outputs/evals/example-generate-text-agent--gpt-4o-mini/23b34930/: results.jsonl
verifiers-ts/environments/example-generate-text-agent/outputs/evals/example-generate-text-agent--gpt-4o-mini/4a9feeb5/: metadata.json  results.jsonl
verifiers-ts/environments/example-generate-text-agent/outputs/evals/example-generate-text-agent--gpt-4o-mini/70cf7b6b/: results.jsonl
verifiers-ts/environments/example-generate-text-agent/outputs/evals/example-generate-text-agent--gpt-4o-mini/7168997e/: results.jsonl
verifiers-ts/environments/example-generate-text-agent/src/: index.ts
verifiers-ts/environments/hangman/: README.md  hangman.py  package.json  pyproject.toml  tsconfig.json
verifiers-ts/environments/hangman/src/: agent.ts  game.ts  index.ts  rewards.ts
(+89 files in other folders)
